--- a/bower.json
+++ b/bower.json
@@ -8,8 +8,7 @@
     "components"
   ],
   "dependencies": {
-    "singularity": ">=0.0.1",
-    "sassy-math": ">=1.5",
-    "modular-scale": ">=1.0.6"
+    "singularity": "~>1.2.0.rc.1",
+    "modular-scale": "~>2.0.0.alpha5"
   }
 }
